# itoutils

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/itoutils/: pytest.py
src/itoutils/django/: commands.py  models.py  testing.py  urls.py
src/itoutils/django/decoupage_administratif/: admin_division_parsing.py  api_client.py  apps.py  constants.py  importer.py  models.py  utils.py
src/itoutils/django/decoupage_administratif/management/commands/: import_decoupage_administratif.py
src/itoutils/django/decoupage_administratif/migrations/: 0001_initial.py  0002_alter_epci_options_alter_region_options_and_more.py  0003_alter_epci_options_alter_region_options_and_more.py
src/itoutils/django/nexus/: api.py  middleware.py  models.py  token.py  views.py
src/itoutils/django/nexus/management/: base_full_sync.py
src/itoutils/nexus/: middleware.py  urls.py  utils.py  views.py
testproject/config/: settings.py  urls.py
testproject/testapp/: models.py
testproject/testapp/management/commands/: broken_dry_runnable_command.py  item.py  nexus_full_sync.py
testproject/testapp/migrations/: 0002_item_category.py  0003_synceditem.py
testproject/testapp/nexus/: middleware.py
tests/django/: factories.py  test_commands.py  test_models.py  test_urls.py
tests/django/decoupage_administratif/: conftest.py  test_admin_division_parsing.py  test_api_client.py  test_importer.py  test_management_commands.py
tests/django/nexus/: test_api.py  test_full_sync_command.py  test_middleware.py  test_sync.py  test_token.py  test_views.py
tests/nexus/: test_middleware.py  test_utils.py  test_views.py
tests/utils/: test_reload_module.py
