[project]
name = "itoutils"
dynamic = ["version"]
description = "GIP Plateforme de l'inclusion's utilities library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
classifiers = [
    "Development Status :: 5 - Production/Stable",

    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",

    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
github = "https://github.com/gip-inclusion/itoutils"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptool]
package-dir = {"" = "src"}

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]

[tool.ruff.lint]
# see prefixes in https://beta.ruff.rs/docs/rules/
select = [
    "B",  # bugbear
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "I",  # isort
    "UP",  # pyupgrade
]
